infer/tests/codetoanalyze/objc/errors/protocol_procdesc/main.c
/*
 * Copyright (c) 2014 - Facebook.
 * All rights reserved.
 */

#include "Bicycle.h"


int main() {

    Bicycle *bike = [Bicycle alloc];

    [bike signalStop];

    return 0;
}
